--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "dbumpbot",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "A simple bot that you are not unemployed (-;",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "perclf",
   "license": "ISC",
   "dependencies": {
     "discord": "^0.8.2",
     "discord.js": "^12.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/codecalf/dBump.git"
   }
 }
